# terrain_cg_course_project

./: .gitignore  README.md
build-cg_course-Desktop-RelWithDebInfo/: CMakeCache.txt  Makefile  bmstu_cg_course_project  bmstu_cg_course_project.cbp  cmake_install.cmake
build-cg_course-Desktop-RelWithDebInfo/.cmake/api/v1/reply/: cache-v2-b04b1f9a9d72803c36fc.json  cmakeFiles-v1-ebe6ef3329e7676cc651.json  codemodel-v2-25704441afb9adf8f521.json  index-2021-10-28T20-19-42-0262.json  target-bmstu_cg_course_project-RelWithDebInfo-90f03b171147ede1d827.json  target-bmstu_cg_course_project_autogen-RelWithDebInfo-cd1b3be4b93948d4d2b1.json
build-cg_course-Desktop-RelWithDebInfo/bmstu_cg_course_project_autogen/XBG7L5Z4V6/: moc_mainwindow.cpp
build-cg_course-Desktop-RelWithDebInfo/bmstu_cg_course_project_autogen/include/: ui_mainwindow.h
build-cg_course-Desktop-Release/: CMakeCache.txt  Makefile  bmstu_cg_course_project  bmstu_cg_course_project.cbp  cmake_install.cmake
build-cg_course-Desktop-Release/.cmake/api/v1/reply/: cache-v2-7ca9ced93c4f67b8369e.json  cmakeFiles-v1-18e7490121004c5e10e9.json  cmakeFiles-v1-6153b3235d7efb6c1ad1.json  codemodel-v2-469a1e7b160a591e427c.json  codemodel-v2-584d87885c972a023e6c.json  codemodel-v2-ef00f0711b7bcb089765.json  index-2021-10-25T21-02-08-0023.json  index-2021-10-28T15-50-17-0921.json  index-2021-10-28T19-56-41-0234.json  target-bmstu_cg_course_project-Release-0619f4f57374a9f4af11.json  target-bmstu_cg_course_project-Release-1ebd96493902afd895d9.json  target-bmstu_cg_course_project-Release-2b3657bfdee57e2c4f2a.json  target-bmstu_cg_course_project_autogen-Release-62c3e3eea0b4b38eb091.json
build-cg_course-Desktop-Release/bmstu_cg_course_project_autogen/: mocs_compilation.cpp
build-cg_course-Desktop-Release/bmstu_cg_course_project_autogen/include/: ui_mainwindow.h
cg_course/: CMakeLists.txt  main.cpp
cg_course/driver/camera/: camera.h  camera.hpp
cg_course/driver/color/: color.h  color.hpp
cg_course/driver/geometry/: figure.h  grid.h  grid.hpp  line.h  line.hpp  point.h  point.hpp  polygon.cpp  polygon.h  polygon.hpp
cg_course/driver/geometry/figure/: figure.h
cg_course/driver/geometry/grid/: grid.cpp  grid.h  grid.hpp
cg_course/driver/geometry/line/: line.cpp  line.h  line.hpp
cg_course/driver/geometry/matrix/: matrix.cpp  matrix.h
cg_course/driver/geometry/point/: point.h  point.hpp
cg_course/driver/geometry/polygon/: polygon.cpp  polygon.h  polygon.hpp
cg_course/driver/geometry/triangle/: triangle.h  triangle.hpp
cg_course/driver/geometry/vector/: vector.h  vector_2.hpp  vector_3.cpp  vector_3.hpp
cg_course/driver/invisible/: zbuffer.cpp  zbuffer.h  zbuffer.hpp
cg_course/driver/landscape/: landscape.h  landscape.hpp
cg_course/driver/light/: light.h  light.hpp
cg_course/driver/perlin/: perlin.hpp
cg_course/driver/request/: request.h
cg_course/driver/transform/: transform.cpp  transform.h  transform.hpp
cg_course/geometry/: point.h  point.hpp
cg_course/interface/: mainwindow.cpp  mainwindow.h  mainwindow.ui
cg_course/perlin/: perlin.hpp
rpz/: 01_contents.aux  02_introduction.aux  02_introduction.tex  03_analysis.aux  03_analysis.tex  04_design.aux  04_design.tex  05_technological.aux  05_technological.tex  06_research.aux  06_research.tex  07_conclusion.aux  07_conclusion.tex  08_biblio.aux  08_biblio.tex  abbreviations.aux  abbreviations.tex  definitions.aux  definitions.tex  preambule.inc.aux  preambule.inc.tex  rpz.aux  rpz.tex  rpz.toc  титульник.docx
rpz/data/: octaves_time.txt  visualization_time.txt
rpz/diagrams/: Диаграмма классов.drawio  алгоритмы построения и визуализации.drawio
